--- a/.github/workflows/build-image-openwrt.yml
+++ b/.github/workflows/build-image-openwrt.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         sudo timedatectl set-timezone "$TZ"
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential clang flex bison gcc-4.8 g++-4.8 g++ gawk \
+        sudo -E apt-get -y install build-essential clang flex bison gcc g++ gawk \
         gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
         python3-distutils python3-setuptools python2.7 rsync swig unzip zlib1g-dev file wget
         sudo -E apt-get -y autoremove --purge
