--- a/.github/workflows/build-image-openwrt.yml
+++ b/.github/workflows/build-image-openwrt.yml
@@ -31,11 +31,14 @@ jobs:
       run: |
         sudo timedatectl set-timezone "$TZ"
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential clang flex bison gcc g++ gawk \
-        gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-        python3-distutils python3-setuptools python2.7 rsync swig unzip zlib1g-dev file wget
+        sudo -E apt-get -y install build-essential libncurses-dev zlib1g-dev gcc g++ gawk git \
+        gettext libssl-dev xsltproc rsync wget unzip python2.7 python3 python3-distutils
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
+        gcc --version
+        g++ --version
+        which gcc
+        which g++
 
     - name: Download Image Builder
       run: |
