--- a/.github/workflows/build-image-openwrt.yml
+++ b/.github/workflows/build-image-openwrt.yml
@@ -35,10 +35,6 @@ jobs:
         gettext libssl-dev xsltproc rsync wget unzip python2.7 python3 python3-distutils
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
-        gcc --version
-        g++ --version
-        which gcc
-        which g++
 
     - name: Download Image Builder
       run: |
@@ -60,6 +56,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/imagebuilder
+        export FORCE_UNSAFE_CONFIGURE=1
         sh make.sh
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
