--- a/.github/workflows/build-ipk-openwrt-immotalwrt.yml
+++ b/.github/workflows/build-ipk-openwrt-immotalwrt.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
@@ -26,11 +26,8 @@ jobs:
       run: |
         sudo timedatectl set-timezone "$TZ"
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential ccache ecj fastjar file g++ gawk \
-        gettext git java-propose-classpath libelf-dev libncurses5-dev \
-        libncursesw5-dev libssl-dev python python2.7-dev python3 unzip wget \
-        python3-distutils python3-setuptools rsync subversion swig time \
-        xsltproc zlib1g-dev
+        sudo -E apt-get -y install build-essential libncurses-dev zlib1g-dev gawk git \
+        gettext libssl-dev xsltproc rsync wget unzip python2.7 python3 python3-distutils
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
 
@@ -41,16 +38,16 @@ jobs:
         cd openwrt
         sh dl_sdk.sh
 
-    - name: Load package feeds
+    - name: Clone package
       run: |
-        cd openwrt/sdk
-        sed -i '1i src-git stangri https://github.com/stangri/https-dns-proxy.git' feeds.conf.default
+        cd openwrt/sdk/package
+        git clone https://github.com/stangri/https-dns-proxy.git
 
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
-        ./scripts/feeds install luci-app-https-dns-proxy
+        ./scripts/feeds install https-dns-proxy
 
     - name: Generate default configuration
       run: |
@@ -68,7 +65,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/luci-app-https-dns-proxy/compile V=s -j$(nproc)
+        make package/https-dns-proxy/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
