--- a/.github/workflows/build-ipk-openwrt-immotalwrt.yml
+++ b/.github/workflows/build-ipk-openwrt-immotalwrt.yml
@@ -26,8 +26,9 @@ jobs:
       run: |
         sudo timedatectl set-timezone "$TZ"
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential libncurses-dev zlib1g-dev gawk git \
-        gettext libssl-dev xsltproc rsync wget unzip python2.7 python3 python3-distutils
+        sudo -E apt-get -y install build-essential ccache clang flex bison g++ gawk \
+        gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
+        python3-distutils python3-setuptools rsync swig unzip zlib1g-dev file wget
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
 
@@ -38,17 +39,16 @@ jobs:
         cd openwrt
         sh dl_sdk.sh
 
-    - name: Clone package
+    - name: Load package feeds
       run: |
-        cd openwrt/sdk/package
-        git clone https://github.com/stangri/https-dns-proxy.git
-        git checkout 2cf67e3
+        cd openwrt/sdk
+        echo "src-git sieucaocao https://github.com/sieucaocao/build-openwrt/tree/b5567d0b6da0714fa5d8d745576ffa0ca2acaee1/package" >> feeds.conf.default
 
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
-        ./scripts/feeds install https-dns-proxy
+        ./scripts/feeds install -a
 
     - name: Generate default configuration
       run: |
@@ -66,7 +66,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/https-dns-proxy/compile V=s -j$(nproc)
+        make package/udpxy/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
