--- a/.github/workflows/build-ipk-openwrt-immotalwrt.yml
+++ b/.github/workflows/build-ipk-openwrt-immotalwrt.yml
@@ -28,7 +28,7 @@ jobs:
         sudo -E apt-get update
         sudo -E apt-get -y install build-essential ccache clang flex bison g++ gawk \
         gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-        python3-distutils python3-setuptools rsync swig unzip zlib1g-dev file wget
+        python3-distutils python3-setuptools python2.7 rsync swig unzip zlib1g-dev file wget
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
 
@@ -49,6 +49,11 @@ jobs:
         cd openwrt/sdk
         ./scripts/feeds update -a
         ./scripts/feeds install -a
+
+    - name: Skip check gcc/g++
+      run: |
+        mkdir -p openwrt/sdk/staging_dir/host
+        touch openwrt/sdk/staging_dir/host/.prereq-build
 
     - name: Generate default configuration
       run: |
