--- a/.github/workflows/build-ipk-openwrt-immotalwrt.yml
+++ b/.github/workflows/build-ipk-openwrt-immotalwrt.yml
@@ -39,26 +39,21 @@ jobs:
         cd openwrt
         sh dl_sdk.sh
 
-    #- name: Load package feeds
-     # run: |
-      #  cd openwrt/sdk
-       # echo "src-git udpxy https://github.com/sieucaocao/packages-openwrt.git" >> feeds.conf.default
-
     - name: Update feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
 
-    - name: Update packages
+    - name: Update new packages
       run: |
         cd openwrt/sdk/feeds/packages/net/
-        rm -rf udpxy/
-        git clone https://github.com/sieucaocao/udpxy.git
+        rm -rf https-dns-proxy/
+        git clone https://github.com/stangri/https-dns-proxy.git
 
     - name: Update feeds
       run: |
         cd openwrt/sdk
-        ./scripts/feeds install udpxy
+        ./scripts/feeds install https-dns-proxy
 
     - name: Skip check gcc/g++
       run: |
@@ -81,7 +76,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/udpxy/compile V=s -j$(nproc)
+        make package/https-dns-proxy/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
