--- a/.github/workflows/build-image-immortalwrt.yml
+++ b/.github/workflows/build-image-immortalwrt.yml
@@ -31,8 +31,8 @@ jobs:
       run: |
         sudo timedatectl set-timezone "$TZ"
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential libncurses5-dev libncursesw5-dev \
-        zlib1g-dev gawk git gettext libssl-dev xsltproc rsync wget unzip python
+        sudo -E apt-get -y install build-essential libncurses-dev zlib1g-dev gcc g++ gawk git \
+        gettext libssl-dev xsltproc rsync wget unzip python2.7.18 python3 python3-distutils
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
 
