--- a/.github/workflows/build-ipk-openwrt-immotalwrt.yml
+++ b/.github/workflows/build-ipk-openwrt-immotalwrt.yml
@@ -46,9 +46,10 @@ jobs:
 
     - name: Update new packages
       run: |
-        cd openwrt/sdk/feeds/packages/net/https-dns-proxy/
-        rm Makefile
-        wget https://raw.githubusercontent.com/sieucaocao/https-dns-proxy/refs/heads/main/Makefile
+        cd openwrt/sdk/feeds/packages/net/
+        rm https-dns-proxy/
+        git clone https://github.com/stangri/https-dns-proxy.git
+        #git clone https://github.com/sieucaocao/https-dns-proxy.git
 
     - name: Install feeds
       run: |
