--- a/.github/workflows/build-ipk-openwrt-immotalwrt.yml
+++ b/.github/workflows/build-ipk-openwrt-immotalwrt.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Install feeds
       run: |
         cd openwrt/sdk
-        ./scripts/feeds install https-dns-proxy
+        ./scripts/feeds install ddns-scripts
 
     #- name: Fix config file
       #run: |
@@ -76,7 +76,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/https-dns-proxy/compile V=s -j$(nproc)
+        make package/ddns-scripts/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
