--- a/.github/workflows/build-ipk-openwrt-immotalwrt.yml
+++ b/.github/workflows/build-ipk-openwrt-immotalwrt.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  DL_SDK_SH: scripts/immortalwrt/dl_sdk.sh
+  DL_SDK_SH: scripts/openwrt/dl_sdk.sh
   TZ: Asia/Ho_Chi_Minh
 
 jobs:
@@ -48,12 +48,19 @@ jobs:
       run: |
         cd openwrt/sdk/feeds/packages/net/
         rm -rf ddns-scripts/
+        rm -rf https-dns-proxy/
+        rm -rf udpxy/
         git clone https://github.com/sieucaocao/ddns-scripts.git
+        git clone https://github.com/sieucaocao/https-dns-proxy.git
+        git clone https://github.com/sieucaocao/udpxy.git
+        
 
     - name: Install feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds install ddns-scripts
+        ./scripts/feeds install https-dns-proxy
+        ./scripts/feeds install udpxy
 
     #- name: Fix config file
       #run: |
@@ -77,6 +84,8 @@ jobs:
       run: |
         cd openwrt/sdk
         make package/ddns-scripts/compile V=s -j$(nproc)
+        make package/https-dns-proxy/compile V=s -j$(nproc)
+        make package/udpxy/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
