--- a/.github/workflows/build-ipk-openwrt-immotalwrt.yml
+++ b/.github/workflows/build-ipk-openwrt-immotalwrt.yml
@@ -48,10 +48,10 @@ jobs:
       run: |
         cd openwrt/sdk/feeds/packages/net/
         rm -rf ddns-scripts/
-        #rm -rf https-dns-proxy/
+        rm -rf https-dns-proxy/
         #rm -rf udpxy/
         git clone https://github.com/sieucaocao/ddns-scripts.git
-        #git clone https://github.com/sieucaocao/https-dns-proxy.git
+        git clone https://github.com/sieucaocao/https-dns-proxy.git
         #git clone https://github.com/sieucaocao/udpxy.git
         
 
@@ -59,7 +59,7 @@ jobs:
       run: |
         cd openwrt/sdk
         ./scripts/feeds install ddns-scripts
-        #./scripts/feeds install https-dns-proxy
+        ./scripts/feeds install https-dns-proxy
         #./scripts/feeds install udpxy
 
     - name: Fix config file
@@ -84,7 +84,7 @@ jobs:
       run: |
         cd openwrt/sdk
         make package/ddns-scripts/compile V=s -j$(nproc)
-        #make package/https-dns-proxy/compile V=s -j$(nproc)
+        make package/https-dns-proxy/compile V=s -j$(nproc)
         #make package/udpxy/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
